# scDaisychain

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
src/scdaisychain/: __init__.py  anndata_io.py  annotations.py  cli.py  count_snps.py  make_matrices.py  phase_x.py  pipeline.py  split_bam.py  tag_bam.py  xi_downstream.py
src/scdaisychain/resources/annotations/: human_chrX_PAR_escape_annotation_for_xi_pipeline.tsv  mouse_chrX_PAR_escape_annotation_for_xi_pipeline.tsv
test_data/: CASTxBL6_F1.0p1.vcf.gz.tbi  deduped.chrX.bam  deduped.chrX.bam.bai  gene_raw_feature_bc_matrix  genes.gtf  transcript_raw_feature_bc_matrix
tests/: test_cli.py
