[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scdaisychain"
version = "0.1.0"
description = "X-linked SNP counting, phasing, BAM tagging, BAM splitting, and Xa/Xi matrix generation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pysam",
    "igraph",
    "pip",
    "scanpy",
    "ipykernel"
]

[project.scripts]
scDaisychain = "scdaisychain.cli:main"
scDaisychain-count-snps = "scdaisychain.count_snps:main"
scDaisychain-phase-x = "scdaisychain.phase_x:main"
scDaisychain-tag-bam = "scdaisychain.tag_bam:main"
scDaisychain-split-bam = "scdaisychain.split_bam:main"
scDaisychain-make-matrices = "scdaisychain.make_matrices:main"
scDaisychain-xi-downstream = "scdaisychain.xi_downstream:main"
[tool.setuptools.packages.find]
where = ["src"]
